--- a/emscripten/Makefile
+++ b/emscripten/Makefile
@@ -3,7 +3,7 @@
 
 TARGET = sdlpal.js
 EMFILES = sdlpal.{js,mem,bc,wast,wasm,wasm.map}
-EMPORTS = -s USE_SDL=2 -s USE_OGG=1 -s USE_VORBIS=1
+EMPORTS = -s USE_SDL=3 -s USE_OGG=1 -s USE_VORBIS=1
 
 INTER=.emscripten
 
@@ -13,14 +13,14 @@ GENERATED = -DPAL_HAS_GIT_REVISION $(shell ../scripts/gengitrev)
 
 DEPFLAGS = -MT $@ -MMD -MP -MF $*$(INTER).Td
 
-CFILES = $(wildcard ../adplug/*.c) $(wildcard ../libmad/*.c) $(wildcard ../timidity/*.c) $(wildcard ../*.c)
+CFILES = $(wildcard ../sdl_compat/*.c) $(wildcard ../adplug/*.c) $(wildcard ../libmad/*.c) $(wildcard ../timidity/*.c) $(wildcard ../*.c)
 CPPFILES = $(wildcard ../adplug/*.cpp) $(wildcard ../*.cpp) emscripten_adapter.cpp
 OBJFILES = $(CFILES:.c=$(INTER).o) $(CPPFILES:.cpp=$(INTER).o)
 DEPFILES = $(OBJFILES:.o=.d)
 
-CFLAGS = -gsource-map -Wall -O2 -fno-strict-aliasing -I. -I.. -I../timidity -DPAL_HAS_PLATFORM_SPECIFIC_UTILS $(DEPFLAGS) $(EMPORTS) $(GENERATED)
+CFLAGS = -gsource-map -Wall -O2 -fno-strict-aliasing -I. -I.. -DUSE_SDL3=1 -I../sdl_compat -I../timidity -DPAL_HAS_PLATFORM_SPECIFIC_UTILS $(DEPFLAGS) $(EMPORTS) $(GENERATED)
 CPPFLAGS = $(CFLAGS) -std=c++11
-override LDFLAGS += -gsource-map -O2 $(EMPORTS) -s TOTAL_MEMORY=134217728 -s TOTAL_STACK=5242880 --emrun -lidbfs.js -s DEMANGLE_SUPPORT=1 -s ASYNCIFY=1 -s NO_EXIT_RUNTIME=1 \
+override LDFLAGS += -gsource-map -O2 $(EMPORTS) -s TOTAL_MEMORY=134217728 -s TOTAL_STACK=5242880 --emrun -lidbfs.js -s ASYNCIFY=1 -sEXIT_RUNTIME=1 \
 	-s EXPORTED_FUNCTIONS="['_EMSCRIPTEN_main']" -s 'EXPORTED_RUNTIME_METHODS=["cwrap"]' -s USE_WEBGL2=1 -s FULL_ES3=1 -s ASSERTIONS=1 --source-map-base http://localhost:8080/
 
 POSTCOMPILE = @mv -f $*$(INTER).Td $*$(INTER).d && touch $@
