--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,17 @@ jobs:
     steps:
     - name: Install Dependencies
       run: sudo apt-get install python3-pip && sudo pip3 install cloudsmith-cli
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+    - name: Setup Android build-tools
+      run: |
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "build-tools;36.0.0"
+        echo "$ANDROID_HOME/build-tools/36.0.0" >> "$GITHUB_PATH"
     - uses: actions/checkout@v4
     - name: submodules
       run: |
@@ -24,7 +35,8 @@ jobs:
         ./gradlew assembleRelease
         cd ..
         mkdir deploy
-        jarsigner -storetype pkcs12 -keystore winrt/SDLPal.UWP/SDLPal_TemporaryKey.pfx -sigalg SHA1withRSA -digestalg SHA1 -signedjar deploy/sdlpal-release.apk -storepass "" android/app/build/outputs/apk/release/app-release-unsigned.apk 1
+        zipalign -f -v 4 android/app/build/outputs/apk/release/app-release-unsigned.apk deploy/sdlpal.apk
+        apksigner sign --ks winrt/SDLPal.UWP/SDLPal_TemporaryKey.pfx --ks-pass pass:"" deploy/sdlpal.apk 
     - name: deploy
       env:
         CLOUDSMITH_API_KEY: ${{secrets.CLOUDSMITH_API_KEY}}
