--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,16 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
+    namespace "com.sdlpal.sdlpal"
+
     lintOptions {
         checkReleaseBuilds false
     }
 
-    compileSdkVersion 28
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.sdlpal.sdlpal"
         minSdkVersion 10
-        targetSdkVersion 28
+        targetSdkVersion 33
         multiDexEnabled true
         externalNativeBuild {
             ndkBuild {
@@ -54,7 +56,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.3.1'
     implementation 'com.android.support:gridlayout-v7:25.3.1'
     implementation 'com.android.support:design:25.3.1'
-    implementation 'com.nononsenseapps:filepicker:4.2.1'
     implementation 'com.android.support:multidex:1.0.3'
     androidTestImplementation 'com.android.support:multidex:1.0.2'
     androidTestImplementation 'com.android.support:multidex-instrumentation:1.0.2'
