--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -16,10 +16,7 @@ jobs:
       uses: actions/setup-python@v5
     - name: Install dependencies
       run: |
-        python -m venv ~/venv
-        source ~/venv/bin/activate
-        echo ~/venv/bin >> "$GITHUB_PATH"
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade --user pip
         pip install cloudsmith-cli
     - uses: actions/checkout@v4
     - name: submodules
