--- a/ios/SDLPal/Podfile
+++ b/ios/SDLPal/Podfile
@@ -1,3 +1,11 @@
 platform :ios, '9.0'
 target 'SDLPal'
 pod 'ActionSheetPicker-3.0', :git => 'https://github.com/arnoldxt/ActionSheetPicker-3.0'
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+    end
+  end
+end
