--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -16,7 +16,7 @@ android {
     defaultConfig {
         applicationId "com.sdlpal.sdlpal"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 36
         ndkVersion "23.1.7779620"
         multiDexEnabled true
         externalNativeBuild {
@@ -63,4 +63,5 @@ dependencies {
     implementation "androidx.gridlayout:gridlayout:1.1.0"
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "androidx.documentfile:documentfile:1.0.1"
 }
