--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - name: Install Dependencies
-      run: sudo apt-get install python3-pip && pip3 install --user cloudsmith-cli
+      run: sudo apt-get -y install --no-install-recommends pipx && pipx install cloudsmith-cli && pipx ensurepath
     - uses: actions/checkout@v4
     - name: submodules
       run: |
@@ -29,10 +29,15 @@ jobs:
       env:
         CLOUDSMITH_API_KEY: ${{secrets.CLOUDSMITH_API_KEY}}
       if: github.repository == 'sdlpal/sdlpal' && github.event_name != 'pull_request'
-      run: $HOME/.local/bin/cloudsmith push raw sdlpal/sdlpal
+      run: cloudsmith push raw sdlpal/sdlpal
            --version `awk -F\" '{print $2;}' generated.h` --name Android
            --republish deploy/*.apk --tags "branch/`echo $GITHUB_REF | sed s#refs/heads/##`"
     - uses: actions/upload-artifact@v4
       with:
         path: deploy
-
+    # uncomment belowing section if you want to debug the build
+    # - name: Setup tmate session
+    #   if: ${{ failure() }}
+    #   uses: mxschmitt/action-tmate@v3
+    #   with:
+    #     limit-access-to-actor: true
