--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -10,8 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
+    - uses: actions/checkout@v4
     - name: Install Dependencies
-      run: sudo apt-get install python3-pip && pip3 install --user cloudsmith-cli
+      run: sudo apt-get -y install --no-install-recommends pipx && pipx install cloudsmith-cli && pipx ensurepath
     - uses: actions/checkout@v4
     - name: submodules
       run: |
@@ -34,16 +35,25 @@ jobs:
       run: |
         git config --global user.email ${AUTO_UPDATE_EMAIL}
         git config --global user.name "AutoUpdate"
-        bash -c '[[ -f "emscripten/sdlpal.js" ]] && git clone --depth=1 https://github.com/sdlpal/demo ~/demo && cp -f emscripten/*.{html,js,wasm,wasm.map,png} ~/demo && cd ~/demo && git add -A && git commit -mAutoupdate -a && git push "https://${AUTO_UPDATE_USER}:${AUTO_UPDATE_PASS}@github.com/sdlpal/demo" || true'
+        git clone --depth=1 https://github.com/sdlpal/demo ~/demo
+        cp -f emscripten/*.{html,js,wasm,wasm.map,png} ~/demo
+        cd ~/demo
+        git add -A
+        git commit -m"${{ github.event.head_commit.message }}" -m"sdlpal/sdlpal@${GITHUB_SHA}" -a
+        git push "https://${AUTO_UPDATE_USER}:${AUTO_UPDATE_PASS}@github.com/sdlpal/demo"
     - name: Deploy to CloudSmith
       if: github.repository == 'sdlpal/sdlpal' && github.event_name != 'pull_request'
       env:
         CLOUDSMITH_API_KEY: ${{secrets.CLOUDSMITH_API_KEY}}
-      run: $HOME/.local/bin/cloudsmith push raw sdlpal/sdlpal
+      run: cloudsmith push raw sdlpal/sdlpal
            --version `awk -F\" '{print $2;}' generated.h` --name Emscripten
            --republish deploy/*.zip --tags "branch/`echo $GITHUB_REF | sed s#refs/heads/##`"
     - uses: actions/upload-artifact@v4
       with:
         path: deploy
-
-
+    # uncomment belowing section if you want to debug the build
+    # - name: Setup tmate session
+    #   if: ${{ failure() }}
+    #   uses: mxschmitt/action-tmate@v3
+    #   with:
+    #     limit-access-to-actor: true
