--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -8,18 +8,15 @@ on:
 
 jobs:
   build:
-    runs-on: macos-14
+    runs-on: macos-15
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
     - name: submodules
       run: |
         sed -i.bak 's#\.\./#https://github.com/sdlpal/#g' .gitmodules
         git submodule init && git submodule update
     - name: Install Dependencies
-      run: python3 -m ensurepip && pip3 install cloudsmith-cli && brew install coreutils
+      run: brew install coreutils pipx && pipx install cloudsmith-cli
     - name: make
       run: |
         bash scripts/gengitrev
@@ -30,7 +27,6 @@ jobs:
         mv /tmp/sdlpal-build/SDLPal.app Payload
         mkdir ../../deploy
         zip ../../deploy/sdlpal-unsigned.ipa -r Payload
-        cd ../..
     - name: deploy
       env:
         CLOUDSMITH_API_KEY: ${{secrets.CLOUDSMITH_API_KEY}}
@@ -42,4 +38,10 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         path: deploy
+    # uncomment belowing section if you want to debug the build
+    # - name: Setup tmate session
+    #   if: ${{ failure() }}
+    #   uses: mxschmitt/action-tmate@v3
+    #   with:
+    #     limit-access-to-actor: true
 
