--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - name: Install Dependencies
-      run: sudo apt-get install binutils-mingw-w64-i686 gcc-mingw-w64-i686 g++-mingw-w64-i686 zip upx-ucl python3-pip && pip3 install --user cloudsmith-cli
+      run: sudo apt-get -y install --no-install-recommends binutils-mingw-w64-i686 gcc-mingw-w64-i686 g++-mingw-w64-i686 zip upx-ucl pipx && pipx install cloudsmith-cli && pipx ensurepath
     - uses: actions/checkout@v4
     - name: submodules
       run: |
@@ -39,9 +39,15 @@ jobs:
       if: github.repository == 'sdlpal/sdlpal' && github.event_name != 'pull_request'
       env:
         CLOUDSMITH_API_KEY: ${{secrets.CLOUDSMITH_API_KEY}}
-      run: $HOME/.local/bin/cloudsmith push raw sdlpal/sdlpal
+      run: cloudsmith push raw sdlpal/sdlpal
            --version `awk -F\" '{print $2;}' generated.h` --name MinGW32
            --republish deploy/*.zip --tags "branch/`echo $GITHUB_REF | sed s#refs/heads/##`"
     - uses: actions/upload-artifact@v4
       with:
         path: deploy
+    # uncomment belowing section if you want to debug the build
+    # - name: Setup tmate session
+    #   if: ${{ failure() }}
+    #   uses: mxschmitt/action-tmate@v3
+    #   with:
+    #     limit-access-to-actor: true
