--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,10 +8,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - name: Install Dependencies
-      run: sudo apt-get install python3-pip && sudo pip3 install cloudsmith-cli
+      run: sudo apt-get install pipx && pipx install cloudsmith-cli
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
