--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -3,6 +3,7 @@ name: iOS CI
 on:
   push:
     branches: '*'
+    tags: '*'
   pull_request:
     branches: [ "master" ]
 
@@ -42,4 +43,11 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         path: deploy
+    - uses: xresloader/upload-to-github-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        file: deploy/*
+        tags: true
+        draft: true
 
