CI: let forks use their own submodule fork

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,7 +27,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: submodules
       run: |
-        sed -i 's#\.\./#https://github.com/sdlpal/#g' .gitmodules
+        sed -i "s#\.\./#https://github.com/${{ github.repository_owner }}/#g" .gitmodules
+        git config --global url.https://${{ secrets.GITHUB_TOKEN }}@github.com/.insteadOf https://github.com/
         git submodule init && git submodule update
     - name: make
       run: |
